--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.8
+lightgbm==4.6.0
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
@@ -44,3 +45,4 @@ traitlets==5.14.3
 typing_extensions==4.14.1
 tzdata==2025.2
 wcwidth==0.2.13
+xgboost==3.0.2
